<resources>
    <string name="app_name">EngBook</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="user">user</string>
    <string name="password">password</string>
    <string name="loging">INICIAR SESION</string>
    <string name="mas">+</string>
    <string name="ingles">ingles</string>
    <string name="port">portugues</string>
    <string name="traduccion">traduccion</string>
    <string name="espa">Español</string>
    <string name="congra">Felicidades, termino el curso, espere mas actualizaciones</string>
    <string name="respuesta">Ingrese la Respuesta</string>
    <string name="ingresarRespuesta">Ingresar Respuesta</string>
    <string name="title_activity_maps">Map</string>
</resources>
